fixs for too long words & text

--- a/src/bhwi.scss
+++ b/src/bhwi.scss
@@ -14,10 +14,6 @@
   }
   &.bhwi-slider, &.bhwi-timeline {
     overflow: hidden;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
     display: flex;
     justify-content: space-around;
   }
@@ -54,7 +50,7 @@
     z-index: 1111;
     position: relative;
     background-color: #ffffff;
-    margin-top: 100px;
+    margin: 100px auto 0;
     width: 700px;
     max-height: 100%;
     max-width: 100%;
@@ -77,27 +73,22 @@
       padding: 10px;
       .bhwi-author {
         display: inline-block;
-        margin: 20px 0 25px 20px;
+        padding: 25px 0 20px 20px;
         font-size: 20px;
         color: inherit;
         text-decoration: none;
+        width: 100%;
+        word-break: break-all;
+        border-bottom: 1px solid #ccc;
       }
       .bhwi-description {
         margin: 20px;
         line-height: 20px;
         word-break: break-all;
       }
-      hr {
-        height: 1px;
-        border: 0;
-        border-top: 1px solid #ccc;
-      }
       footer {
-        position: absolute;
-        bottom: 0;
-        width: 37%;
-        width: calc(40% - 20px);
-        margin-bottom: 10px;
+        border-top: 1px solid #ccc;
+        padding-top: 10px;
         .bhwi-credits {
           text-align: right;
           a {
@@ -149,8 +140,15 @@
     }
   }
   @media (max-width: 850px) {
-    .bhwi-navigation {
-      display: none;
+    .bhwi-content {
+      .bhwi-text-section {
+        .bhwi-navigation {
+          display: none;
+        }
+        .bhwi-author {
+          padding: 10px 0 20px 20px;
+        }
+      }
     }
   }
   @media (max-width: 700px) {
@@ -170,6 +168,19 @@
           position: initial;
           bottom: initial;
           width: auto;
+        }
+      }
+    }
+  }
+  @media (min-width: 701px) {
+    .bhwi-content {
+      display: flex;
+
+      .bhwi-text-section {
+        display: flex;
+        flex-direction: column;
+        .bhwi-description {
+          flex: 1;
         }
       }
     }
